Integración completa: mejoras en controladores, servicios, repos, seguridad y pruebas